--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,7 @@ version: "2"
 plugins:
   eslint:
     enabled: true
-    channel: "eslint-4"
+    channel: "eslint-7"
     config:
       config: .eslintrc.json
 
@@ -14,11 +14,9 @@ checks:
     config:
       threshold: 150
   similar-code:
-    enabled: false
+    enabled: false``
   identical-code:
     enabled: false
 
-ratings:
-   paths:
-    - "**.js"
-    - "**.jsx"
+exclude_paths:
+- static/**/*
