--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "0.0.7",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lampask/portfolio"
+    "url": "https://github.com/lampask/lampfolio"
   },
   "scripts": {
     "develop": "gatsby develop",
@@ -23,17 +23,16 @@
   },
   "dependencies": {
     "@babel/core": "^7.10.2",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.1.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "babel-plugin-emotion": "^10.0.33",
-    "emotion-theming": "^10.0.27",
-    "gatsby": "^2.23.1",
+    "@material-ui/styles": "^4.11.3",
+    "babel-plugin-emotion": "^11.0.0",
+    "gatsby": "^2.32.3",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-catch-links": "^2.3.4",
-    "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-emotion": "^4.3.3",
+    "gatsby-plugin-emotion": "^5.4.0",
     "gatsby-plugin-google-analytics": "^2.3.3",
     "gatsby-plugin-manifest": "^2.4.10",
     "gatsby-plugin-material-ui": "^2.1.9",
@@ -46,31 +45,33 @@
     "gatsby-remark-images": "^3.3.9",
     "gatsby-remark-prismjs": "^3.5.3",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-source-github-api": "^0.2.1",
+    "gatsby-source-gitlab": "^1.0.3",
     "gatsby-source-google-spreadsheet": "^2.0.0",
     "gatsby-transformer-remark": "^2.8.14",
     "gatsby-transformer-sharp": "^2.5.4",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.1.0",
+    "react-three-fiber": "^5.3.18",
     "react-typography": "^0.16.19",
-    "typeface-candal": "0.0.72",
-    "typeface-open-sans": "0.0.75",
+    "three": "^0.125.2",
     "typography": "^0.16.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "lighthouse": "^6.4.1",
-    "prettier": "^2.1.2",
-    "dotenv": "^8.2.0"
+    "lighthouse": "^7.0.1",
+    "prettier": "^2.1.2"
   },
   "keywords": [
     "lmpsk",
