--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,8 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 
 end_of_line = lf
 charset = utf-8
@@ -13,13 +13,13 @@ insert_final_newline = true
 trim_trailing_whitespace = false
 
 [{package,bower}.json]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 
 [{.eslintrc,.scss-lint.yml}]
 indent_style = space
 indent_size = 2
 
 [*.{scss,sass}]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
