--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My portfolio page",
   "homepage": "https://lmpsk.me",
   "license": "MIT",
-  "version": "0.0.7",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/lampask/lampfolio"
@@ -22,39 +22,38 @@
     "start": "npm run develop"
   },
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "@emotion/react": "^11.1.4",
+    "@babel/core": "^7.12.16",
+    "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.11.3",
+    "@loadable/component": "^5.14.1",
     "babel-plugin-emotion": "^11.0.0",
     "gatsby": "^2.32.3",
-    "gatsby-image": "^2.4.6",
-    "gatsby-plugin-catch-links": "^2.3.4",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
+    "gatsby-plugin-catch-links": "^2.10.0",
     "gatsby-plugin-emotion": "^5.4.0",
-    "gatsby-plugin-google-analytics": "^2.3.3",
-    "gatsby-plugin-manifest": "^2.4.10",
-    "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-plugin-remote-images": "^2.1.0",
-    "gatsby-plugin-sharp": "^2.6.10",
-    "gatsby-plugin-sitemap": "^2.4.4",
-    "gatsby-plugin-typography": "^2.5.3",
-    "gatsby-remark-images": "^3.3.9",
-    "gatsby-remark-prismjs": "^3.5.3",
-    "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-plugin-google-analytics": "^2.11.0",
+    "gatsby-plugin-loadable-components-ssr": "^2.1.0",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-remote-images": "^2.2.0",
+    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-sitemap": "^2.12.0",
+    "gatsby-plugin-typography": "^2.12.0",
+    "gatsby-remark-images": "^3.11.0",
+    "gatsby-remark-prismjs": "^3.13.0",
+    "gatsby-source-filesystem": "^2.11.0",
     "gatsby-source-github-api": "^0.2.1",
     "gatsby-source-gitlab": "^1.0.3",
     "gatsby-source-google-spreadsheet": "^2.0.0",
-    "gatsby-transformer-remark": "^2.8.14",
-    "gatsby-transformer-sharp": "^2.5.4",
-    "prismjs": "^1.20.0",
+    "gatsby-transformer-remark": "^2.16.0",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-headroom": "^3.0.0",
+    "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-three-fiber": "^5.3.18",
     "react-typography": "^0.16.19",
@@ -64,20 +63,13 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.10.0",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "lighthouse": "^7.0.1",
-    "prettier": "^2.1.2"
-  },
-  "keywords": [
-    "lmpsk",
-    "portfolio",
-    "lampfolio",
-    "personal blog",
-    "gatsby"
-  ]
+    "prettier": "^2.2.1"
+  }
 }
